--- a/Tech-E/Tech-E/Tech-E.csproj
+++ b/Tech-E/Tech-E/Tech-E.csproj
@@ -65,6 +65,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Tech-E.mdf" />
+    <Content Include="App_Data\Tech-E_log.ldf">
+      <DependentUpon>Tech-E.mdf</DependentUpon>
+    </Content>
     <Content Include="Default.html" />
     <Content Include="Web.config" />
   </ItemGroup>
