--- a/Tech-E/Tech-E_BackEnd/Tech-E_BackEnd.csproj
+++ b/Tech-E/Tech-E_BackEnd/Tech-E_BackEnd.csproj
@@ -50,10 +50,19 @@
     <Compile Include="frmStaffLogin.Designer.cs">
       <DependentUpon>frmStaffLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="PaymentLookUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PaymentLookUp.Designer.cs">
+      <DependentUpon>PaymentLookUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmStaffLogin.resx">
       <DependentUpon>frmStaffLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PaymentLookUp.resx">
+      <DependentUpon>PaymentLookUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
