--- a/Tech-E/Tech-E_BackEnd/Tech-E_BackEnd.csproj
+++ b/Tech-E/Tech-E_BackEnd/Tech-E_BackEnd.csproj
@@ -58,6 +58,12 @@
     <Compile Include="StaffLogin.Designer.cs">
       <DependentUpon>StaffLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="staff_productlist.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="staff_productlist.Designer.cs">
+      <DependentUpon>staff_productlist.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="PaymentLookUp.resx">
       <DependentUpon>PaymentLookUp.cs</DependentUpon>
     </EmbeddedResource>
@@ -72,6 +78,9 @@
     </Compile>
     <EmbeddedResource Include="StaffLogin.resx">
       <DependentUpon>StaffLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="staff_productlist.resx">
+      <DependentUpon>staff_productlist.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
