--- a/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
+++ b/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
@@ -45,13 +45,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tstCustomer.cs" />
+    <Compile Include="tstPayment.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tech-E_ClassLibrary\Tech-E_ClassLibrary.csproj">
