--- a/Tech-E/Tech-E_BackEnd/Tech-E_BackEnd.csproj
+++ b/Tech-E/Tech-E_BackEnd/Tech-E_BackEnd.csproj
@@ -56,6 +56,12 @@
     <Compile Include="admin_staffviews.Designer.cs">
       <DependentUpon>admin_staffviews.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustomerList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomerList.Designer.cs">
+      <DependentUpon>CustomerList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
