--- a/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
+++ b/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
@@ -42,6 +42,7 @@
     <Compile Include="clsCustomer.cs" />
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="clsPayment.cs" />
+    <Compile Include="clsProduct.cs" />
     <Compile Include="clsStaff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
