--- a/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
+++ b/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tst.CustomerCollection.cs" />
     <Compile Include="tstCustomer.cs" />
     <Compile Include="tstPayment.cs" />
     <Compile Include="tstStaffs.cs" />
