--- a/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
+++ b/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="clsAppointments.cs" />
     <Compile Include="clsCustomer.cs" />
+    <Compile Include="clsCustomerCollection.cs" />
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="clsPayment.cs" />
     <Compile Include="clsProduct.cs" />
