--- a/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
+++ b/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="clsCustomerCollection.cs" />
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="clsPayment.cs" />
+    <Compile Include="clsPaymentCollection.cs" />
     <Compile Include="clsProduct.cs" />
     <Compile Include="clsProductCollection.cs" />
     <Compile Include="clsStaff.cs" />
