--- a/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
+++ b/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
@@ -56,6 +56,7 @@
     <Compile Include="tstCustomer.cs" />
     <Compile Include="tstCustomerCollection.cs" />
     <Compile Include="tstPayment.cs" />
+    <Compile Include="tstPaymentCollection.cs" />
     <Compile Include="tstProductCollection.cs" />
     <Compile Include="tstStaffs.cs" />
     <Compile Include="tstProduct.cs" />
