--- a/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
+++ b/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
@@ -48,6 +48,7 @@
     <Compile Include="clsProduct.cs" />
     <Compile Include="clsProductCollection.cs" />
     <Compile Include="clsStaff.cs" />
+    <Compile Include="clsStaffCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
