--- a/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
+++ b/Tech-E/Tech-E_UnitTestProject/Tech-E_UnitTestProject.csproj
@@ -58,6 +58,7 @@
     <Compile Include="tstPayment.cs" />
     <Compile Include="tstPaymentCollection.cs" />
     <Compile Include="tstProductCollection.cs" />
+    <Compile Include="tstStaffCollection.cs" />
     <Compile Include="tstStaffs.cs" />
     <Compile Include="tstProduct.cs" />
     <Compile Include="tstAppointment.cs" />
