--- a/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
+++ b/Tech-E/Tech-E_ClassLibrary/Tech-E_ClassLibrary.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsAppointmentCollection.cs" />
     <Compile Include="clsAppointments.cs" />
     <Compile Include="clsCustomer.cs" />
     <Compile Include="clsCustomerCollection.cs" />
