--- a/Tech-E/Tech-E/Tech-E.csproj
+++ b/Tech-E/Tech-E/Tech-E.csproj
@@ -65,18 +65,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Customer.aspx" />
+    <Content Include="Default.aspx" />
     <Content Include="Default.html" />
     <Content Include="Products.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.aspx.cs">
-      <DependentUpon>Customer.aspx</DependentUpon>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Customer.aspx.designer.cs">
-      <DependentUpon>Customer.aspx</DependentUpon>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Products.aspx.cs">
       <DependentUpon>Products.aspx</DependentUpon>
