--- a/Tech-E/Tech-E/Tech-E.csproj
+++ b/Tech-E/Tech-E/Tech-E.csproj
@@ -71,6 +71,7 @@
     <Content Include="Default.aspx" />
     <Content Include="Default.html" />
     <Content Include="Products.aspx" />
+    <Content Include="ProductsBackEnd.aspx" />
     <Content Include="StaffDeletePage.aspx" />
     <Content Include="Staffs.aspx" />
     <Content Include="StaffsAdd.aspx" />
@@ -111,6 +112,13 @@
     </Compile>
     <Compile Include="Products.aspx.designer.cs">
       <DependentUpon>Products.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ProductsBackEnd.aspx.cs">
+      <DependentUpon>ProductsBackEnd.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ProductsBackEnd.aspx.designer.cs">
+      <DependentUpon>ProductsBackEnd.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaffDeletePage.aspx.cs">
