--- a/Tech-E/Tech-E/Web.config
+++ b/Tech-E/Tech-E/Web.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="Tech-EConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\p1318601x\Source\Repos\Tech-E\Tech-E\App_Data\Tech-E.mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
+    <add name="Tech-EConnectionStringNew" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\P13203114\Source\Repos\Tech-E\Tech-E\App_Data\Tech-E.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
